--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -13,6 +13,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 2;
 
 }
 
@@ -98,9 +99,8 @@
 
 
 .stockBoxMain{
-  
-  display: 'flex';
-  flex-wrap: 'wrap';
-  justify-content: 'center';
+
+  width: 800px;
+  border: solid;
 
 }
