--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
+
 .App {
   text-align: center;
 }
@@ -5,15 +8,18 @@
 
 .navMain {
 
-  background-color: maroon;
-  height: 50px;
-  color: white;
+  background-color: white;
+  height: 80px;
+  color: rgb(84, 169, 84);
   padding-top: 25px;
   text-align: center;
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 40px;
+
 }
 
 
@@ -25,6 +31,8 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  font-family: 'Nanum Myeongjo', serif;
+  font-size: 13px;
 }
 
 .homepageMain{
@@ -44,33 +52,60 @@
 }
 
 .stockMain{
-  width: 150px;
-  border: solid;
-  border-color: gray;
+  background-color: white;
+  width: 200px;
+  border-color: lightgray;
   border-radius: 20px;
-  margin: 10px;
+  margin: 20px;
   padding: 10px;
 
 }
 
 
-.stockTitle{
-  color: rgb(85, 80, 80);
-  text-align: left;
-  padding-bottom: 10px;
+.stockName{
+  color: rgb(0, 0, 0);
+  font-family: 'Josefin Sans', sans-serif;
+  text-transform: uppercase;
+  height: 50px;
+  font-size: 14px;
 }
 
+.stockTitle{
+  color: rgb(84, 162, 117);
+  text-align: left;
+  padding-bottom: 2px;
+  font-size: 13px;
+}
 
 
 .stockContent{
   font-weight: 500;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
+  font-size: 13px;
+  text-align: left;
+  
+}
+
+.stockMetrics{
+  font-size: 13px;
+  background-color: rgb(47, 94, 99);
+  padding: 5px;
+  color: white;
+  text-align: left;
 }
 
 
 
 .addStockMain{
   margin: 10px;
+  position: fixed;
+  top: 70px;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+  width: 100%;
+  font-size: 13px;
+  z-index: 2;
 }
 
 
@@ -78,14 +113,16 @@
 .deleteStock{
   position: relative;
   background-color: lightgray;
-  width: 100%;
+  width: 80%;
   border: none;
   color: black;
   padding-left: 12px;
   padding-right: 12px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
   border-radius: 20px;
+  margin-top: 20px;
+  font-size: 13px;
 
 }
 
@@ -98,8 +135,36 @@
 
 
 .stockBoxMain{
-
-  width: 800px;
-  border: solid;
-
+  width: 1000px;
+  border-radius: 50px;
+  background-color: rgb(189, 245, 186);
+  box-shadow: 5px 5px #888888;
+  margin: 20px;
 }
+
+
+.stockBoxTitle{
+  text-transform: uppercase;
+  padding-top: 20px;
+  font-family: 'Nanum Myeongjo', serif;
+}
+
+
+.addStockMessage{
+  font-family: 'Nanum Myeongjo', serif;
+  font-size: 14px;
+  padding-top: 3px;
+  font-style: italic;
+  color: green;
+}
+
+h9 {
+  font-family: 'Nanum Myeongjo', serif;
+  font-size: 15px;
+}
+
+.optionFont {
+  font-family: 'Nanum Myeongjo', serif;
+  font-size: 15px;
+}
+
