--- a/front-end/src/components/Login/Login.css
+++ b/front-end/src/components/Login/Login.css
@@ -1,5 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
 .login-wrapper {
+    margin: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 25px;
+    border: rgb(145, 215, 145) 10px;
+    border-style: groove;
+    box-shadow: 20px 30px 20px 1px lightgrey;
+    color:#4CAF50;
+    width: 400px;
+    padding:50px;
+    padding-bottom: 100px;
 }
+label{
+    margin: 20px 0 ;
+    width:100%;
+    position: relative;
+}
+
+#root > div > form > div > label > input{
+    width: 100%;
+    color: green;
+    border: solid 2px green !important;
+    border-color: #4CAF50 !important;
+}
+#root > div > form > div > label > input :focus{
+    border-color: #4CAF50 !important;
+}
+.row-wrapper{
+    width:250px;
+    flex-direction: row;
+}
+#root > div > h1{
+    color:green;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+#root > div > div > form > div > div{
+    position: relative;
+}
+
+button {
+    position: absolute;
+    left: 25%;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px !important;
+    font-family: 'Josefin Sans', sans-serif !important;
+    border-radius:25px !important;
+    margin-top:50px;
+  }
+  #root > div{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+  }
+  img{
+    width: 70vw;
+    height:100%;
+  }
