--- a/front-end/src/components/Login/Login.css
+++ b/front-end/src/components/Login/Login.css
@@ -12,19 +12,20 @@
     color:#4CAF50;
     width: 400px;
     padding:50px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 label{
-    margin: 20px 0 ;
+    margin: 10px 0 ;
     width:100%;
     position: relative;
 }
 
-#root > div > form > div > label > input{
+#root > div > div > form > div > label > input{
     width: 100%;
     color: green;
-    border: solid 2px green !important;
-    border-color: #4CAF50 !important;
+    border: solid 1px green !important;
+    box-shadow: 5px 3px 1px 1px lightgrey;
+
 }
 #root > div > form > div > label > input :focus{
     border-color: #4CAF50 !important;
@@ -39,6 +40,7 @@ label{
 }
 
 #root > div > div > form > div > div{
+    margin-top: 20px;
     position: relative;
 }
 
@@ -48,21 +50,28 @@ button {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 18px !important;
     font-family: 'Josefin Sans', sans-serif !important;
     border-radius:25px !important;
-    margin-top:50px;
+    margin-top:100px;
   }
   #root > div{
     position: relative;
     display: flex;
     flex-direction: row;
   }
-  img{
+  #login-image{
     width: 70vw;
     height:100%;
+  }
+
+  .slogan{
+    font-size: 20px;
+  }
+  #slogan{
+    margin-top:30%;
   }
