--- a/front-end/src/components/Login/Login.css
+++ b/front-end/src/components/Login/Login.css
@@ -57,7 +57,7 @@ label{
     font-size: 18px !important;
     font-family: 'Josefin Sans', sans-serif !important;
     border-radius:25px !important;
-    margin-top:100px;
+    /* margin-top:100px; */
   }
  #login-main{
     position: relative;
@@ -74,4 +74,11 @@ label{
   }
   #slogan{
     margin-top:30%;
+  }
+
+  @media screen and (max-width: 600px) {
+    #login-main{
+      flex-direction: column;
+    }
+  
   }
